Fixes word breaks in ie8 and fixes jump link when spanning multi lines and when in ie7.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5930,6 +5930,9 @@ img {
       notes:
         - "Use this on elements where you need the words to break when confined
            to small containers."
+        - "This only works in IE8 when the element with the .u-break-word class
+           has layout. See <http://stackoverflow.com/questions/3997223/word-wrapbreak-word-not-working-in-ie8>
+           for more information."
   tags:
     - cfgov-utilities
 */
@@ -8501,14 +8504,14 @@ a.category-slug.active {
     - name: .jump-link
       markup: |
         <a class="jump-link" href="#">
-            Default jump link
+            Default jump link<span class="cf-icon cf-icon-right jump-link_icon"></span>
         </a>
       codenotes:
         - .jump-link
     - name: .jump-link__large (modifier)
       markup: |
         <a class="jump-link jump-link__large" href="#">
-            Large jump link
+            Large jump link<span class="cf-icon cf-icon-right jump-link_icon"></span>
         </a>
       codenotes:
         - .jump-link__large
@@ -8517,9 +8520,7 @@ a.category-slug.active {
 */
 
 .jump-link {
-  display: inline-block;
   position: relative;
-  margin-right: 1.5em;
   border-bottom-width: 1px;
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
   font-style: normal;
@@ -8531,40 +8532,16 @@ a.category-slug.active {
   font-weight: normal !important;
 }
 
-.jump-link:before {
-  content: "\e002";
-}
-
-.lt-ie8 .jump-link {
-  *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '\e002');
-}
-
 .jump-link__large {
   margin-right: 1.5em;
   font-size: 1.125em;
 }
 
-.jump-link__download:before {
-  content: "\e406";
-}
-
-.lt-ie8 .jump-link__download {
-  *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '\e406');
-}
-
-.jump-link:before {
-  font-family: 'CFPB Minicons';
+.jump-link_icon {
   display: inline-block;
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  display: block;
   position: absolute;
-  top: 0.25em;
-  right: -1.5em;
+  padding-top: 0.25em;
   padding-left: 0.25em;
-  width: 1em;
   border-bottom: none;
 }
 
