--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -136,6 +136,9 @@
       notes:
         - "Use this on elements where you need the words to break when confined
            to small containers."
+        - "This only works in IE8 when the element with the .u-break-word class
+           has layout. See <http://stackoverflow.com/questions/3997223/word-wrapbreak-word-not-working-in-ie8>
+           for more information."
   tags:
     - cfgov-utilities
 */
